<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Reminder">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:text="@string/ReminderTopic"
        android:textAlignment="center"
        android:textSize="34sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            android:background="@drawable/text_input_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/MessageET"
            android:layout_width="match_parent"
            android:background="@drawable/text_input_bg"
            android:layout_height="wrap_content"
            android:hint="@string/Messgae" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/picker_bg"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:calendarTextColor="@color/white"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:background="@drawable/picker_bg"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/submitButton"
        android:backgroundTint="@color/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/reminderlist"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/reminderListButton"
        android:backgroundTint="@color/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>

